# bitcoin-pq-poc-realmine

./: .gitignore  AGENTS.md  BIP-QP-ZIP_README.md  README.md  bitcoin.conf  miner_config.toml  settings.json  start.bat
.agents/: AGENTS.md
agent_skills/: README.md  rust_repair_guide.md  stratum_protocol.md  vulkan_debug.md
cmake/: rust_qp_zip.cmake
developer_resources/: BIP-QP-ZIP_README.md  agents.md
developer_resources/agents/: guidelines.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  bip-qp-zip-draft.mediawiki
releases/: rust_qp_zip.lib
scripts/: start.bat
src/: CMakeLists.txt  clientversion.cpp  init.cpp  validation.cpp
src/qp_zip_miner/: Cargo.toml
src/qp_zip_miner/.cargo/: config.toml
src/qp_zip_miner/src/: index.html  main.rs
src/qp_zip_miner/src/miner_modules/: config.rs  miner_core.rs  mod.rs  stratum.rs  tui.rs  vulkan.rs
src/rust_qp_zip/: Cargo.toml
src/rust_qp_zip/include/: qpzip.h
src/rust_qp_zip/src/: extractor.rs  ffi.rs  lib.rs  quantizer.rs  zk_prover.rs
src/script/: interpreter.cpp  interpreter.h  qpzip.cpp  qpzip.h
src/test/: CMakeLists.txt  qpzip_tests.cpp
